--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.7",
+    "axios": "^1.6.2",
+    "i": "^0.3.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
