--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-id-swiper": "^4.0.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.20.0",
     "react-tabs": "^6.0.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
