--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.8.7",
+    "aos": "^2.3.4",
     "axios": "^1.6.2",
     "i": "^0.3.7",
     "localforage": "^1.10.0",
@@ -22,6 +23,7 @@
     "react-id-swiper": "^4.0.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.20.0",
+    "react-share": "^5.0.2",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5"
