--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@tanstack/react-query": "^5.8.7",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
     "i": "^0.3.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "npm": "^10.2.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-id-swiper": "^4.0.0",
     "react-rating": "^2.0.5",
