--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-query": "^5.8.7",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.6.0",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "i": "^0.3.7",
@@ -30,6 +32,7 @@
     "react-share": "^5.0.2",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
